--- a/code/akka/.classpath
+++ b/code/akka/.classpath
@@ -1,11 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry output="target/scala-2.11/classes" kind="src" path="src/main/scala"/>
-  <classpathentry output="target/scala-2.11/classes" kind="src" path="src/main/java"/>
-  <classpathentry output="target/scala-2.11/test-classes" kind="src" path="src/test/scala"/>
-  <classpathentry output="target/scala-2.11/test-classes" kind="src" path="src/test/java"/>
-  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-  <classpathentry kind="lib" path="/Users/tim/.ivy2/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.3.9.jar"/>
-  <classpathentry kind="lib" path="/Users/tim/.ivy2/cache/com.typesafe/config/bundles/config-1.2.1.jar"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" output="target/scala-2.11/classes" path="src/main/scala"/>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/tim/.ivy2/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.3.9.jar"/>
+	<classpathentry kind="lib" path="/Users/tim/.ivy2/cache/com.typesafe/config/bundles/config-1.2.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
